--- a/challenge-1/index.html
+++ b/challenge-1/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./css/style.css">
-    <title>First Challenge</title>
+    <title>:: First Challenge - Horiseon ::</title>
 </head>
 <body>
     <header>
