--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
             </p>
         </div>
     </section>
-    <aside class="benefits">
-        <div class="benefit-lead">
+    <aside>
+        <div class="benefits">
             <h3>Lead Generation</h3>
             <img src="./images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefits">
             <h3>Brand Awareness</h3>
             <img src="./images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefits">
             <h3>Cost Management</h3>
             <img src="./images/cost-management.png" />
             <p>
